<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ABC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_letter">LetterA</string>
    <string name="title_activity_letter_b">LetterB</string>
    <string name="title_activity_letter_c">LetterC</string>
    <string name="title_activity_letter_d">LetterD</string>
    <string name="title_activity_letter_e">LetterE</string>
    <string name="title_activity_letter_f">LetterF</string>
    <string name="title_activity_letter_g">LetterG</string>
    <string name="title_activity_letter_h">LetterH</string>
    <string name="title_activity_letter_i">LetterI</string>
    <string name="title_activity_letter_j">LetterJ</string>
    <string name="title_activity_letter_k">LetterK</string>
    <string name="title_activity_letter_l">LetterL</string>
    <string name="title_activity_letter_m">LetterM</string>
    <string name="title_activity_letter_n">LetterN</string>
    <string name="title_activity_letter_o">LetterO</string>
    <string name="title_activity_letter_p">LetterP</string>
    <string name="title_activity_letter_q">LetterQ</string>
    <string name="title_activity_letter_r">LetterR</string>
    <string name="title_activity_letter_s">LetterS</string>
    <string name="title_activity_letter_t">LetterT</string>
    <string name="title_activity_letter_u">LetterU</string>
    <string name="title_activity_letter_v">LetterV</string>
    <string name="title_activity_letter_w">LetterW</string>
    <string name="title_activity_letter_x">LetterX</string>
    <string name="title_activity_letter_y">LetterY</string>
    <string name="title_activity_letter_z">LetterZ</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_g">G</string>
    <string name="button_h">H</string>
    <string name="button_i">I</string>
    <string name="button_j">J</string>
    <string name="button_k">K</string>
    <string name="button_l">L</string>
    <string name="button_m">M</string>
    <string name="button_n">N</string>
    <string name="button_o">O</string>
    <string name="button_p">P</string>
    <string name="button_q">Q</string>
    <string name="button_r">R</string>
    <string name="button_s">S</string>
    <string name="button_t">T</string>
    <string name="button_u">U</string>
    <string name="button_v">V</string>
    <string name="button_w">W</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="AnimalA">ANT</string>
    <string name="AnimalB">BAT</string>
    <string name="AnimalC">CAT</string>
    <string name="AnimalD">DOG</string>
    <string name="AnimalE">ELEPHANT</string>
    <string name="AnimalF">FOX</string>
    <string name="AnimalG">GOAT</string>
    <string name="AnimalH">HORSE</string>
    <string name="AnimalI">IGUANA</string>
    <string name="AnimalJ">JELLYFISH</string>
    <string name="AnimalK">KANGAROO</string>
    <string name="AnimalL">LION</string>
    <string name="AnimalM">MONKEY</string>
    <string name="AnimalN">NEWT</string>
    <string name="AnimalO">OCTOPUS</string>
    <string name="AnimalP">PENGUIN</string>
    <string name="AnimalQ">QUAIL</string>
    <string name="AnimalR">RAT</string>
    <string name="AnimalS">SNAKE</string>
    <string name="AnimalT">TIGER</string>
    <string name="AnimalU">UAKARI</string>
    <string name="AnimalV">VULTURE</string>
    <string name="AnimalW">WOLF</string>
    <string name="AnimalX">X-RAY TETRA</string>
    <string name="AnimalY">YAK</string>
    <string name="AnimalZ">ZEBRA</string>

</resources>
